
  * Rebuild for wheezy:
    - Disable architectures that weren't part of wheezy
    - Use gcc-4.6 for all architectures
    - Change ABI number to 0.bpo.4
    - [arm] btrfs: Work around bug in gcc-4.6 (fixes FTBFS)
    - linux-image: Depend on initramfs-tools without any alternatives, so
      that neither apt nor aptitude will automatically switch to dracut

 -- Ben Hutchings <ben@decadent.org.uk>  Mon, 27 Apr 2015 20:13:07 +0100

linux (3.16.7-ckt9-3~deb8u1) jessie-security; urgency=high

  [ Ben Hutchings ]
  * [x86] crypto: aesni - fix memory usage in GCM decryption (Closes: #782561)
    (CVE-2015-3331)
  * tcp: Fix crash in TCP Fast Open (Closes: #782515) (CVE-2015-3332)
  * kernel: Provide READ_ONCE and ASSIGN_ONCE
  * Replace use of ACCESS_ONCE on non-scalar types with READ_ONCE or barriers
    as appropriate
  * kernel: tighten rules for ACCESS ONCE
  * kernel: Change ASSIGN_ONCE(val, x) to WRITE_ONCE(x, val)
  * fs: take i_mutex during prepare_binprm for set[ug]id executables
    (CVE-2015-3339)

  [ Ian Campbell ]
  * [xen] release per-queue Tx and Rx resource when disconnecting, fixing
    network after save/restore or migration. (Closes: #782698)

 -- Ben Hutchings <ben@decadent.org.uk>  Fri, 24 Apr 2015 03:00:00 +0100

linux (3.16.7-ckt9-2~bpo70+1) wheezy-backports; urgency=medium

  * Rebuild for wheezy:
    - Disable architectures that weren't part of wheezy
    - Use gcc-4.6 for all architectures
    - Change ABI number to 0.bpo.4
    - [arm] btrfs: Work around bug in gcc-4.6 (fixes FTBFS)
    - linux-image: Depend on initramfs-tools without any alternatives, so
      that neither apt nor aptitude will automatically switch to dracut

 -- Ben Hutchings <ben@decadent.org.uk>  Tue, 21 Apr 2015 19:23:57 +0100

linux (3.16.7-ckt9-2) unstable; urgency=medium

  * btrfs: simplify insert_orphan_item (Closes: #782362)

 -- Ben Hutchings <ben@decadent.org.uk>  Mon, 13 Apr 2015 02:01:54 +0100

linux (3.16.7-ckt9-1) unstable; urgency=medium
