@@ -7,6 +7,8 @@ linux (3.16.7-ckt9-3~deb8u1~bpo70+1) wheezy-backports; urgency=high
     - [arm] btrfs: Work around bug in gcc-4.6 (fixes FTBFS)
     - linux-image: Depend on initramfs-tools without any alternatives, so
       that neither apt nor aptitude will automatically switch to dracut
+    - debian.py,gencontrol.py: Fix the version sanity checks for backports
+      and security/LTS uploads
 
  -- Ben Hutchings <ben@decadent.org.uk>  Mon, 27 Apr 2015 20:13:07 +0100
 
